--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@
 /WebApi_MyBasicApp/.vs/WebApi_MyBasicApp/FileContentIndex/b6ba772f-2c07-4617-be6b-b8f1ab6acb10.vsidx
 /WebApi_MyBasicApp/.vs/WebApi_MyBasicApp/FileContentIndex/1e0db135-1da5-4ab5-8324-004dd9c33b3b.vsidx
 /WebApi_MyBasicApp/.vs/WebApi_MyBasicApp/FileContentIndex/2a11e750-b351-493b-888f-d1a42af68088.vsidx
+/WebApi_MyBasicApp/.vs/WebApi_MyBasicApp/FileContentIndex/c4a78d8e-5a68-45f1-b7c7-5efa21cb8f82.vsidx
