main - ajustes finais

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@
 /WebApi_MyBasicApp/.vs/WebApi_MyBasicApp/FileContentIndex/1e0db135-1da5-4ab5-8324-004dd9c33b3b.vsidx
 /WebApi_MyBasicApp/.vs/WebApi_MyBasicApp/FileContentIndex/2a11e750-b351-493b-888f-d1a42af68088.vsidx
 /WebApi_MyBasicApp/.vs/WebApi_MyBasicApp/FileContentIndex/c4a78d8e-5a68-45f1-b7c7-5efa21cb8f82.vsidx
+*.vsidx
